--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" href="css/catalog.css">
 	<link rel="stylesheet" href="css/events.css">
 	<link rel="stylesheet" href="css/publications.css">
+	<link rel="stylesheet" href="css/projects.css">
 	<link rel="preload" href="fonts/open-sans-v18-latin_cyrillic-regular.woff2" as="font" type="font/woff2">
 	<link rel="preload" href="fonts/open-sans-v18-latin_cyrillic-600.woff2" as="font" type="font/woff2">
 	<link rel="preload" href="fonts/open-sans-v18-latin_cyrillic-700.woff2" as="font" type="font/woff2">
@@ -810,6 +811,55 @@
 							</div>
 						</div>
 					</div>
+				</div>
+			</div>
+		</section>
+		<section class="projects">
+			<div class="container">
+				<h2 class="heading projects__heading text-block-reset">Проекты</h2>
+				<p class="paragraph projects__paragraph text-block-reset">Предварительные выводы: постоянное информационно- пропагандистское обеспечение нашей деятельности однозначно фиксирует необходимость
+					своевременного выполнения сверхзадачи. А ещё независимые государства смешаны с не уникальными данными до степени совершенной неузнаваемости, из-за чего
+					возрастает их статус бесполезности. Прежде всего, постоянное информационно- пропагандистское <img class="alert" src="img/alert.svg" alt="Внимание">
+					обеспечение нашей деятельности однозначно фиксирует необходимость экономической целесообразности принимаемых решений. И нет сомнений, что действия
+					представителей оппозиции могут быть рассмотрены <img class="alert" src="img/alert.svg" alt="Внимание"> исключительно в разрезе маркетинговых и
+					финансовых <img class="alert" src="img/alert.svg" alt="Внимание"> предпосылок. Банальные, но неопровержимые выводы, а также представители современных социальных
+					резервов призывают нас к новым свершениям, которые, в свою очередь, должны быть смешаны с не уникальными данными до степени совершенной неузнаваемости.
+					Подробнее: <span class="paragraph__link selectable link-reset">blanchard-art.ru/projects/about</span></p>
+				<h3 class="partners-heading text-block-reset">Партнёры проектов:</h3>
+				<div class="partners">
+					<div class="swiper-container projects-swiper">
+						<div class="swiper-wrapper projects-swiper__wrapper">
+							<div class="swiper-slide projects-card">
+								<img class="projects-card__img" src="img/projects/freelands.png" alt="Freelands Foundation">
+							</div>
+							<div class="swiper-slide projects-card">
+								<img class="projects-card__img" src="img/projects/ICA.png" alt="Institute for Contemporary Art">
+							</div>
+							<div class="swiper-slide projects-card">
+								<img class="projects-card__img" src="img/projects/workhouse.png" alt="Workhouse Art Center">
+							</div>
+							<div class="swiper-slide projects-card">
+								<img class="projects-card__img" src="img/projects/1849.png" alt="1849 wine co">
+							</div>
+							<div class="swiper-slide projects-card">
+								<img class="projects-card__img" src="img/projects/hiscox.png" alt="HISCOX">
+							</div>
+							<div class="swiper-slide projects-card">
+								<img class="projects-card__img" src="img/projects/camden.png" alt="Camden arts centre">
+							</div>
+							<div class="swiper-slide projects-card">
+								<img class="projects-card__img" src="img/projects/stassen.png" alt="Stassen premium belgian cider">
+							</div>
+							<div class="swiper-slide projects-card">
+								<img class="projects-card__img" src="img/projects/watts.png" alt="Watts Gallery Artist Village">
+							</div>
+							<div class="swiper-slide projects-card">
+								<img class="projects-card__img" src="img/projects/esad.png" alt="ESAD">
+							</div>
+						</div>
+					</div>
+					<div class="swiper-button-prev projects-swiper__button-prev projects-swiper__button pagination__button selectable link-reset"></div>
+					<div class="swiper-button-next projects-swiper__button-next projects-swiper__button pagination__button selectable link-reset"></div>
 				</div>
 			</div>
 		</section>
