--- a/index.html
+++ b/index.html
@@ -817,14 +817,14 @@
 		<section class="projects">
 			<div class="container">
 				<h2 class="heading projects__heading text-block-reset">Проекты</h2>
-				<p class="paragraph projects__paragraph text-block-reset">Предварительные выводы: постоянное информационно- пропагандистское обеспечение нашей деятельности однозначно фиксирует необходимость
-					своевременного выполнения сверхзадачи. А ещё независимые государства смешаны с не уникальными данными до степени совершенной неузнаваемости, из-за чего
-					возрастает их статус бесполезности. Прежде всего, постоянное информационно- пропагандистское <img class="alert" src="img/alert.svg" alt="Внимание">
-					обеспечение нашей деятельности однозначно фиксирует необходимость экономической целесообразности принимаемых решений. И нет сомнений, что действия
-					представителей оппозиции могут быть рассмотрены <img class="alert" src="img/alert.svg" alt="Внимание"> исключительно в разрезе маркетинговых и
-					финансовых <img class="alert" src="img/alert.svg" alt="Внимание"> предпосылок. Банальные, но неопровержимые выводы, а также представители современных социальных
-					резервов призывают нас к новым свершениям, которые, в свою очередь, должны быть смешаны с не уникальными данными до степени совершенной неузнаваемости.
-					Подробнее: <span class="paragraph__link selectable link-reset">blanchard-art.ru/projects/about</span></p>
+				<p class="paragraph projects__paragraph text-block-reset">Предварительные выводы: постоянное информационно- пропагандистское обеспечение нашей деятельности
+					однозначно фиксирует необходимость своевременного выполнения сверхзадачи. А ещё независимые государства смешаны с не уникальными данными до степени
+					совершенной неузнаваемости, из-за чего возрастает их статус бесполезности. Прежде всего, постоянное информационно- пропагандистское
+					<span class="alert alert_1"></span> обеспечение нашей деятельности однозначно фиксирует необходимость экономической целесообразности принимаемых решений.
+					И нет сомнений, что действия представителей оппозиции могут быть рассмотрены <span class="alert alert_2"></span> исключительно в разрезе маркетинговых и финансовых
+					<span class="alert alert_3"></span> предпосылок. Банальные, но неопровержимые выводы, а также представители современных социальных резервов призывают нас
+					к новым свершениям, которые, в свою очередь, должны быть смешаны с не уникальными данными до степени совершенной неузнаваемости. Подробнее:
+					<a class="paragraph__link selectable link-reset" href="#">blanchard-art.ru/projects/about</a></p>
 				<h3 class="partners-heading text-block-reset">Партнёры проектов:</h3>
 				<div class="partners">
 					<div class="swiper-container projects-swiper">
