--- a/index.html
+++ b/index.html
@@ -820,9 +820,9 @@
 				<p class="paragraph projects__paragraph text-block-reset">Предварительные выводы: постоянное информационно- пропагандистское обеспечение нашей деятельности
 					однозначно фиксирует необходимость своевременного выполнения сверхзадачи. А ещё независимые государства смешаны с не уникальными данными до степени
 					совершенной неузнаваемости, из-за чего возрастает их статус бесполезности. Прежде всего, постоянное информационно- пропагандистское
-					<span class="alert alert_1"></span> обеспечение нашей деятельности однозначно фиксирует необходимость экономической целесообразности принимаемых решений.
-					И нет сомнений, что действия представителей оппозиции могут быть рассмотрены <span class="alert alert_2"></span> исключительно в разрезе маркетинговых и финансовых
-					<span class="alert alert_3"></span> предпосылок. Банальные, но неопровержимые выводы, а также представители современных социальных резервов призывают нас
+					<span class="alert alert_1" tabindex=0></span> обеспечение нашей деятельности однозначно фиксирует необходимость экономической целесообразности принимаемых решений.
+					И нет сомнений, что действия представителей оппозиции могут быть рассмотрены <span class="alert alert_2" tabindex=0></span> исключительно в разрезе маркетинговых и финансовых
+					<span class="alert alert_3" tabindex=0></span> предпосылок. Банальные, но неопровержимые выводы, а также представители современных социальных резервов призывают нас
 					к новым свершениям, которые, в свою очередь, должны быть смешаны с не уникальными данными до степени совершенной неузнаваемости. Подробнее:
 					<a class="paragraph__link selectable link-reset" href="#">blanchard-art.ru/projects/about</a></p>
 				<h3 class="partners-heading text-block-reset">Партнёры проектов:</h3>
@@ -831,30 +831,39 @@
 						<div class="swiper-wrapper projects-swiper__wrapper">
 							<div class="swiper-slide projects-card">
 								<img class="projects-card__img" src="img/projects/freelands.png" alt="Freelands Foundation">
+								<img class="projects-card__img_hover" src="img/projects/freelands_hover.png" alt="Freelands Foundation">
 							</div>
 							<div class="swiper-slide projects-card">
 								<img class="projects-card__img" src="img/projects/ICA.png" alt="Institute for Contemporary Art">
+								<img class="projects-card__img_hover" src="img/projects/ICA_hover.png" alt="Institute for Contemporary Art">
 							</div>
 							<div class="swiper-slide projects-card">
 								<img class="projects-card__img" src="img/projects/workhouse.png" alt="Workhouse Art Center">
+								<img class="projects-card__img_hover" src="img/projects/workhouse_hover.png" alt="Workhouse Art Center">
 							</div>
 							<div class="swiper-slide projects-card">
 								<img class="projects-card__img" src="img/projects/1849.png" alt="1849 wine co">
+								<img class="projects-card__img_hover" src="img/projects/1849_hover.png" alt="1849 wine co">
 							</div>
 							<div class="swiper-slide projects-card">
 								<img class="projects-card__img" src="img/projects/hiscox.png" alt="HISCOX">
+								<img class="projects-card__img_hover" src="img/projects/hiscox_hover.png" alt="HISCOX">
 							</div>
 							<div class="swiper-slide projects-card">
 								<img class="projects-card__img" src="img/projects/camden.png" alt="Camden arts centre">
+								<img class="projects-card__img_hover" src="img/projects/camden_hover.png" alt="Camden arts centre">
 							</div>
 							<div class="swiper-slide projects-card">
 								<img class="projects-card__img" src="img/projects/stassen.png" alt="Stassen premium belgian cider">
+								<img class="projects-card__img_hover" src="img/projects/stassen_hover.png" alt="Stassen premium belgian cider">
 							</div>
 							<div class="swiper-slide projects-card">
 								<img class="projects-card__img" src="img/projects/watts.png" alt="Watts Gallery Artist Village">
+								<img class="projects-card__img_hover" src="img/projects/watts_hover.png" alt="Watts Gallery Artist Village">
 							</div>
 							<div class="swiper-slide projects-card">
 								<img class="projects-card__img" src="img/projects/esad.png" alt="ESAD">
+								<img class="projects-card__img_hover" src="img/projects/esad_hover.png" alt="ESAD">
 							</div>
 						</div>
 					</div>
