--- a/index.html
+++ b/index.html
@@ -628,65 +628,53 @@
 				<form class="publications-form" action="#">
 					<fieldset class="categories-fieldset">
 						<legend class="categories-fieldset__legend">Категории</legend>
-						<label class="categories-fieldset__checkbox checkbox" tabindex=0>
+						<label class="categories-fieldset__checkbox checkbox selectable link-reset">
 							<input class="checkbox__input" type="checkbox">
-							<span class="checkbox__box"></span>
-							Бестселлеры
+							<span class="checkbox__text">Бестселлеры</span>
 						</label>
-						<label class="categories-fieldset__checkbox checkbox selectable link-reset" tabindex=0>
+						<label class="categories-fieldset__checkbox checkbox selectable link-reset">
 							<input class="checkbox__input" type="checkbox">
-							<span class="checkbox__box"></span>
-							Искусство
+							<span class="checkbox__text">Искусство</span>
 						</label>
-						<label class="categories-fieldset__checkbox checkbox selectable link-reset" tabindex=0>
+						<label class="categories-fieldset__checkbox checkbox selectable link-reset">
 							<input class="checkbox__input" type="checkbox">
-							<span class="checkbox__box"></span>
-							Архитектура
+							<span class="checkbox__text">Архитектура</span>
 						</label>
-						<label class="categories-fieldset__checkbox checkbox selectable link-reset active" tabindex=0>
+						<label class="categories-fieldset__checkbox checkbox selectable link-reset active">
 							<input class="checkbox__input" type="checkbox" checked>
-							<span class="checkbox__box"></span>
-							Дизайн
+							<span class="checkbox__text">Дизайн</span>
 						</label>
-						<label class="categories-fieldset__checkbox checkbox selectable link-reset" tabindex=0>
+						<label class="categories-fieldset__checkbox checkbox selectable link-reset">
 							<input class="checkbox__input" type="checkbox">
-							<span class="checkbox__box"></span>
-							Мода
+							<span class="checkbox__text">Мода</span>
 						</label>
-						<label class="categories-fieldset__checkbox checkbox selectable link-reset" tabindex=0>
+						<label class="categories-fieldset__checkbox checkbox selectable link-reset">
 							<input class="checkbox__input" type="checkbox">
-							<span class="checkbox__box"></span>
-							Детям
+							<span class="checkbox__text">Детям</span>
 						</label>
-						<label class="categories-fieldset__checkbox checkbox selectable link-reset" tabindex=0>
+						<label class="categories-fieldset__checkbox checkbox selectable link-reset">
 							<input class="checkbox__input" type="checkbox">
-							<span class="checkbox__box"></span>
-							Художественная литература
+							<span class="checkbox__text">Художественная литература</span>
 						</label>
-						<label class="categories-fieldset__checkbox checkbox selectable link-reset" tabindex=0>
+						<label class="categories-fieldset__checkbox checkbox selectable link-reset">
 							<input class="checkbox__input" type="checkbox">
-							<span class="checkbox__box"></span>
-							Публицистика
+							<span class="checkbox__text">Публицистика</span>
 						</label>
-						<label class="categories-fieldset__checkbox checkbox selectable link-reset" tabindex=0>
+						<label class="categories-fieldset__checkbox checkbox selectable link-reset">
 							<input class="checkbox__input" type="checkbox">
-							<span class="checkbox__box"></span>
-							Путеводители
+							<span class="checkbox__text">Путеводители</span>
 						</label>
-						<label class="categories-fieldset__checkbox checkbox selectable link-reset" tabindex=0>
+						<label class="categories-fieldset__checkbox checkbox selectable link-reset">
 							<input class="checkbox__input" type="checkbox">
-							<span class="checkbox__box"></span>
-							Философия
+							<span class="checkbox__text">Философия</span>
 						</label>
-						<label class="categories-fieldset__checkbox checkbox selectable link-reset" tabindex=0>
+						<label class="categories-fieldset__checkbox checkbox selectable link-reset">
 							<input class="checkbox__input" type="checkbox">
-							<span class="checkbox__box"></span>
-							Учебная литература
+							<span class="checkbox__text">Учебная литература</span>
 						</label>
-						<label class="categories-fieldset__checkbox checkbox selectable link-reset" tabindex=0>
+						<label class="categories-fieldset__checkbox checkbox selectable link-reset">
 							<input class="checkbox__input" type="checkbox">
-							<span class="checkbox__box"></span>
-							Журналы и газеты
+							<span class="checkbox__text">Журналы и газеты</span>
 						</label>
 					</fieldset>
 					<fieldset class="price-fieldset">
@@ -831,39 +819,30 @@
 						<div class="swiper-wrapper projects-swiper__wrapper">
 							<div class="swiper-slide projects-card">
 								<img class="projects-card__img" src="img/projects/freelands.png" alt="Freelands Foundation">
-								<img class="projects-card__img_hover" src="img/projects/freelands_hover.png" alt="Freelands Foundation">
 							</div>
 							<div class="swiper-slide projects-card">
 								<img class="projects-card__img" src="img/projects/ICA.png" alt="Institute for Contemporary Art">
-								<img class="projects-card__img_hover" src="img/projects/ICA_hover.png" alt="Institute for Contemporary Art">
 							</div>
 							<div class="swiper-slide projects-card">
 								<img class="projects-card__img" src="img/projects/workhouse.png" alt="Workhouse Art Center">
-								<img class="projects-card__img_hover" src="img/projects/workhouse_hover.png" alt="Workhouse Art Center">
 							</div>
 							<div class="swiper-slide projects-card">
 								<img class="projects-card__img" src="img/projects/1849.png" alt="1849 wine co">
-								<img class="projects-card__img_hover" src="img/projects/1849_hover.png" alt="1849 wine co">
 							</div>
 							<div class="swiper-slide projects-card">
 								<img class="projects-card__img" src="img/projects/hiscox.png" alt="HISCOX">
-								<img class="projects-card__img_hover" src="img/projects/hiscox_hover.png" alt="HISCOX">
 							</div>
 							<div class="swiper-slide projects-card">
 								<img class="projects-card__img" src="img/projects/camden.png" alt="Camden arts centre">
-								<img class="projects-card__img_hover" src="img/projects/camden_hover.png" alt="Camden arts centre">
 							</div>
 							<div class="swiper-slide projects-card">
 								<img class="projects-card__img" src="img/projects/stassen.png" alt="Stassen premium belgian cider">
-								<img class="projects-card__img_hover" src="img/projects/stassen_hover.png" alt="Stassen premium belgian cider">
 							</div>
 							<div class="swiper-slide projects-card">
 								<img class="projects-card__img" src="img/projects/watts.png" alt="Watts Gallery Artist Village">
-								<img class="projects-card__img_hover" src="img/projects/watts_hover.png" alt="Watts Gallery Artist Village">
 							</div>
 							<div class="swiper-slide projects-card">
 								<img class="projects-card__img" src="img/projects/esad.png" alt="ESAD">
-								<img class="projects-card__img_hover" src="img/projects/esad_hover.png" alt="ESAD">
 							</div>
 						</div>
 					</div>
