--- a/index.html
+++ b/index.html
@@ -867,8 +867,8 @@
 					</form>
 					<h3 class="contacts__form-heading text-block-reset">Связаться в один клик</h3>
 					<ul class="social-list contacts__social-list ul-reset">
-						<li class="social-list__item"><a href="#" class="social-list__link social-list__link_whatsapp" aria-label="Whatsapp"></a></li>
-						<li class="social-list__item"><a href="#" class="social-list__link social-list__link_telegram" aria-label="Telegram"></a></li>
+						<li class="social-list__item selectable"><a href="#" class="social-list__link social-list__link_whatsapp" aria-label="Whatsapp"></a></li>
+						<li class="social-list__item selectable"><a href="#" class="social-list__link social-list__link_telegram" aria-label="Telegram"></a></li>
 					</ul>
 				</div>
 				<div id="map"></div>
@@ -878,9 +878,9 @@
 	<footer class="footer">
 		<div class="container footer__container">
 			<ul class="social-list footer__social-list ul-reset">
-				<li class="social-list__item"><a href="#" class="social-list__link social-list__link_vk" aria-label="VK"></a></li>
-				<li class="social-list__item"><a href="#" class="social-list__link social-list__link_instagram" aria-label="Instagram"></a></li>
-				<li class="social-list__item"><a href="#" class="social-list__link social-list__link_facebook" aria-label="Facebook"></a></li>
+				<li class="social-list__item selectable"><a href="#" class="social-list__link social-list__link_vk" aria-label="VK"></a></li>
+				<li class="social-list__item selectable"><a href="#" class="social-list__link social-list__link_instagram" aria-label="Instagram"></a></li>
+				<li class="social-list__item selectable"><a href="#" class="social-list__link social-list__link_facebook" aria-label="Facebook"></a></li>
 			</ul>
 			<img class="logo footer__logo img-reset" src="img/logo.svg" alt="Blanchard. Художественная галерея">
 		</div>
