--- a/index.html
+++ b/index.html
@@ -252,6 +252,11 @@
 						<div class="swiper-pagination gallery-swiper__pagination"></div>
 						<div class="swiper-button-next gallery-swiper__button-next pagination__button selectable link-reset"></div>
 					</div>
+					<div class="gallery__modal closed hidden">
+						<img class="gallery__img-big" src="img/gallery/1.jpg" alt="Картина">
+						<p class="gallery__description">Картина</p>
+						<button class="close-btn selectable link-reset">Закрыть</button>
+					</div>
 				</div>
 				<p class="paragraph gallery__paragraph text-block-reset">
 					Вам предоставляется 10 бесплатных скачиваний. Для увеличения количества скачиваний
