--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 				<img class="logo img-reset" src="img/logo.svg" alt="Blanchard. Художественная галерея">
 				<button class="search link-reset" aria-label="Поиск по сайту"></button>
 				<nav class="header-nav">
+					<button class="menu-close-btn selectable link-reset" aria-label="Закрыть"></button>
 					<ul class="menu-list ul-reset">
 						<li class="menu-list__item"><a class="menu-list__link link-reset selectable" href="#about">О нас</a></li>
 						<li class="menu-list__item"><a class="menu-list__link link-reset selectable" href="#gallery">Галерея</a></li>
