--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 				<form class="search-form">
 					<button class="search-form__btn link-reset" type="submit" aria-label="Поиск по сайту"></button>
 					<input class="search-form__input link-reset" type="search" placeholder="Поиск по сайту">
+					<button class="search-close-btn selectable link-reset" aria-label="Закрыть"></button>
 				</form>
 			</div>
 		</div>
