--- a/index.html
+++ b/index.html
@@ -254,10 +254,20 @@
 						<div class="swiper-pagination gallery-swiper__pagination"></div>
 						<div class="swiper-button-next gallery-swiper__button-next pagination__button selectable link-reset"></div>
 					</div>
-					<div class="gallery__modal closed hidden">
-						<img class="gallery__img-big" src="img/gallery/1.jpg" alt="Картина">
-						<p class="gallery__description">Картина</p>
-						<button class="close-btn selectable link-reset">Закрыть</button>
+					<div class="gallery-modal closed hidden">
+						<div class="gallery-modal__container">
+							<div class="gallery-modal__img-container">
+								<img class="gallery-modal__img" src="img/gallery/1.jpg" alt="Картина">
+							</div>
+							<div class="gallery-modal__text-block">
+								<h3 class="gallery-modal__heading text-block-reset">Казимир Малевич</h3>
+								<p class="gallery-modal__subheading text-block-reset">“Женщина с граблями”</p>
+								<p class="gallery-modal__subtext text-block-reset">1931-1932</p>
+								<p class="gallery-modal__description text-block-reset">Картина из второй серии крестьянского цикла работ Казимира Малевича. Художник принялся за её
+									создание в 1930-1931 годах, после того, как первый цикл был утерян после Берлинской и Варшавской выставок в 1927 году.</p>
+							</div>
+							<button class="close-btn selectable link-reset" aria-label="Закрыть"></button>
+						</div>
 					</div>
 				</div>
 				<p class="paragraph gallery__paragraph text-block-reset">
